tests/golden/cases/parse_error_ascii_block.txt
tests/golden/cases/parse_error_ascii_block.suay:4:1: syntax error: Expected } to close block (got EOF)

^
